--- a/fixed_boss.ini
+++ b/fixed_boss.ini
@@ -1,289 +1,378 @@
 -----고정보스-----
+bossname = 고룡 거드
+bosstime = 19:15
+genPeriod = 24:00
+startDate = 2019-12-25
+before_alert_ment = 입니다
+alert_ment = 탐 입니다. 어여오세요
+
+bossname = 설벽 거드
+bosstime = 19:15
+genPeriod = 24:00
+startDate = 2019-12-25
+before_alert_ment = 입니다
+alert_ment = 탐 입니다. 어여오세요
+
+bossname = 가디언 폭스
+bosstime = 19:15
+genPeriod = 24:00
+startDate = 2019-12-25
+before_alert_ment = 입니다
+alert_ment = 탐 입니다. 어여오세요
+
+bossname = 이계의 발록
+bosstime = 23:00
+genPeriod = 24:00
+startDate = 2019-12-25
+before_alert_ment = 입니다
+alert_ment = 탐 입니다. 어여오세요
+
+bossname = 화염 데스
+bosstime = 23:30
+genPeriod = 24:00
+startDate = 2019-12-25
+before_alert_ment = 입니다
+alert_ment = 탐 입니다. 어여오세요
+
+bossname = 데몬
+bosstime = 22:00
+genPeriod = 24:00
+startDate = 2020-02-11
+before_alert_ment = 입니다
+alert_ment = 탐 입니다. 어여오세요
+
 bossname = 바포
 bosstime = 14:00
 genPeriod = 24:00
-startDate = 2022-04-04
+startDate = 2020-08-30
 before_alert_ment = 입니다
 alert_ment = 탐 입니다. 어여오세요
 
 bossname = 바포
 bosstime = 20:00
 genPeriod = 24:00
-startDate = 2022-04-04
+startDate = 2020-08-30
 before_alert_ment = 입니다
 alert_ment = 탐 입니다. 어여오세요
 
 bossname = 네크
 bosstime = 11:00
 genPeriod = 02:00
-startDate = 2022-04-04
+startDate = 2020-08-30
 before_alert_ment = 입니다
 alert_ment = 탐 입니다. 어여오세요
 
-bossname = 클라인 기감 1층
+bossname = 폭주한 클라인
 bosstime = 00:00
 genPeriod = 168:00
-startDate = 2022-04-11
+startDate = 2021-01-25
 before_alert_ment = 입니다
 alert_ment = 탐 입니다. 어여오세요
 
-bossname = 클라인 기감 1층
+bossname = 클라인 기감1
 bosstime = 06:00
 genPeriod = 168:00
-startDate = 2022-04-04
+startDate = 2021-01-25
 before_alert_ment = 입니다
 alert_ment = 탐 입니다. 어여오세요
 
-bossname = 클라인 기감 1층
+bossname = 클라인 기감1
 bosstime = 12:00
 genPeriod = 168:00
-startDate = 2022-04-04
+startDate = 2021-01-25
 before_alert_ment = 입니다
 alert_ment = 탐 입니다. 어여오세요
 
-bossname = 클라인 기감 1층
+bossname = 클라인 기감1
 bosstime = 18:00
 genPeriod = 168:00
-startDate = 2022-04-04
+startDate = 2021-01-25
 before_alert_ment = 입니다
 alert_ment = 탐 입니다. 어여오세요
 
-bossname = 클라인 기감 1층
+bossname = 클라인 기감1
 bosstime = 00:00
 genPeriod = 168:00
-startDate = 2022-04-05
+startDate = 2021-01-26
 before_alert_ment = 입니다
 alert_ment = 탐 입니다. 어여오세요
 
-bossname = 클라인 기감 1층
+bossname = 클라인 기감1
 bosstime = 06:00
 genPeriod = 168:00
-startDate = 2022-04-05
+startDate = 2021-01-26
 before_alert_ment = 입니다
 alert_ment = 탐 입니다. 어여오세요
 
-bossname = 클라인 기감 1층
+bossname = 클라인 기감1
 bosstime = 12:00
 genPeriod = 168:00
-startDate = 2022-04-05
+startDate = 2021-01-26
 before_alert_ment = 입니다
 alert_ment = 탐 입니다. 어여오세요
 
-bossname = 클라인 기감 1층
+bossname = 클라인 기감1
 bosstime = 18:00
 genPeriod = 168:00
-startDate = 2022-04-05
+startDate = 2021-01-26
 before_alert_ment = 입니다
 alert_ment = 탐 입니다. 어여오세요
 
-bossname = 클라인 기감 1층
+bossname = 클라인 기감1
 bosstime = 00:00
 genPeriod = 168:00
-startDate = 2022-04-06
+startDate = 2021-01-27
 before_alert_ment = 입니다
 alert_ment = 탐 입니다. 어여오세요
 
-bossname = 클라인 기감 1층
+bossname = 클라인 기감1
 bosstime = 06:00
 genPeriod = 168:00
-startDate = 2022-04-06
+startDate = 2021-01-27
 before_alert_ment = 입니다
 alert_ment = 탐 입니다. 어여오세요
 
-bossname = 클라인 기감 1층
+bossname = 클라인 기감1
 bosstime = 12:00
 genPeriod = 168:00
-startDate = 2022-04-06
+startDate = 2021-01-27
 before_alert_ment = 입니다
 alert_ment = 탐 입니다. 어여오세요
 
-bossname = 클라인 기감 1층
+bossname = 클라인 기감1
 bosstime = 18:00
 genPeriod = 168:00
-startDate = 2022-04-06
+startDate = 2021-01-27
 before_alert_ment = 입니다
 alert_ment = 탐 입니다. 어여오세요
 
-bossname = 클라인 기감 1층
+bossname = 클라인 기감1
 bosstime = 00:00
 genPeriod = 168:00
-startDate = 2022-04-07
+startDate = 2021-01-28
 before_alert_ment = 입니다
 alert_ment = 탐 입니다. 어여오세요
 
-bossname = 클라인 기감 1층
+bossname = 클라인 기감1
 bosstime = 06:00
 genPeriod = 168:00
-startDate = 2022-04-07
+startDate = 2021-01-28
 before_alert_ment = 입니다
 alert_ment = 탐 입니다. 어여오세요
 
-bossname = 클라인 기감 1층
+bossname = 클라인 기감1
 bosstime = 12:00
 genPeriod = 168:00
-startDate = 2022-04-07
+startDate = 2021-01-28
 before_alert_ment = 입니다
 alert_ment = 탐 입니다. 어여오세요
 
-bossname = 클라인 기감 1층
+bossname = 클라인 기감1
 bosstime = 18:00
 genPeriod = 168:00
-startDate = 2022-04-07
+startDate = 2021-01-28
 before_alert_ment = 입니다
 alert_ment = 탐 입니다. 어여오세요
 
-bossname = 클라인 기감 1층
+bossname = 클라인 기감1
 bosstime = 00:00
 genPeriod = 168:00
-startDate = 2022-04-08
+startDate = 2021-01-29
 before_alert_ment = 입니다
 alert_ment = 탐 입니다. 어여오세요
 
-bossname = 클라인 기감 1층
+bossname = 클라인 기감1
 bosstime = 06:00
 genPeriod = 168:00
-startDate = 2022-04-08
+startDate = 2021-01-29
 before_alert_ment = 입니다
 alert_ment = 탐 입니다. 어여오세요
 
-bossname = 클라인 기감 1층
+bossname = 클라인 기감1
 bosstime = 12:00
 genPeriod = 168:00
-startDate = 2022-04-08
+startDate = 2021-01-29
 before_alert_ment = 입니다
 alert_ment = 탐 입니다. 어여오세요
 
-bossname = 클라인 기감 1층
+bossname = 클라인 기감1
 bosstime = 18:00
 genPeriod = 168:00
-startDate = 2022-04-08
+startDate = 2021-01-29
 before_alert_ment = 입니다
 alert_ment = 탐 입니다. 어여오세요
 
-bossname = 타로스 기감 2층
+bossname = 타로스 기감2
 bosstime = 07:00
 genPeriod = 168:00
-startDate = 2022-04-04
+startDate = 2021-01-25
 before_alert_ment = 입니다
 alert_ment = 탐 입니다. 어여오세요
 
-bossname = 타로스 기감 2층
+bossname = 타로스 기감2
 bosstime = 14:00
 genPeriod = 168:00
-startDate = 2022-04-04
+startDate = 2021-01-25
 before_alert_ment = 입니다
 alert_ment = 탐 입니다. 어여오세요
 
-bossname = 타로스 기감 2층
+bossname = 타로스 기감2
 bosstime = 21:00
 genPeriod = 168:00
-startDate = 2022-04-04
+startDate = 2021-01-25
 before_alert_ment = 입니다
 alert_ment = 탐 입니다. 어여오세요
 
-bossname = 타로스 기감 2층
+bossname = 타로스 기감2
 bosstime = 07:00
 genPeriod = 168:00
-startDate = 2022-04-05
+startDate = 2021-01-26
 before_alert_ment = 입니다
 alert_ment = 탐 입니다. 어여오세요
 
-bossname = 타로스 기감 2층
+bossname = 타로스 기감2
 bosstime = 14:00
 genPeriod = 168:00
-startDate = 2022-04-05
+startDate = 2021-01-26
 before_alert_ment = 입니다
 alert_ment = 탐 입니다. 어여오세요
 
-bossname = 타로스 기감 2층
+bossname = 타로스 기감2
 bosstime = 21:00
 genPeriod = 168:00
-startDate = 2022-04-05
+startDate = 2021-01-26
 before_alert_ment = 입니다
 alert_ment = 탐 입니다. 어여오세요
 
-bossname = 타로스 기감 2층
+bossname = 타로스 기감2
 bosstime = 07:00
 genPeriod = 168:00
-startDate = 2022-04-06
+startDate = 2021-01-27
 before_alert_ment = 입니다
 alert_ment = 탐 입니다. 어여오세요
 
-bossname = 타로스 기감 2층
+bossname = 타로스 기감2
 bosstime = 14:00
 genPeriod = 168:00
-startDate = 2022-04-06
+startDate = 2021-01-27
 before_alert_ment = 입니다
 alert_ment = 탐 입니다. 어여오세요
 
-bossname = 타로스 기감 2층
+bossname = 타로스 기감2
 bosstime = 21:00
 genPeriod = 168:00
-startDate = 2022-04-06
+startDate = 2021-01-27
 before_alert_ment = 입니다
 alert_ment = 탐 입니다. 어여오세요
 
-bossname = 타로스 기감 2층
+bossname = 타로스 기감2
 bosstime = 07:00
 genPeriod = 168:00
-startDate = 2022-04-07
+startDate = 2021-01-28
 before_alert_ment = 입니다
 alert_ment = 탐 입니다. 어여오세요
 
-bossname = 타로스 기감 2층
+bossname = 타로스 기감2
 bosstime = 14:00
 genPeriod = 168:00
-startDate = 2022-04-07
+startDate = 2021-01-28
 before_alert_ment = 입니다
 alert_ment = 탐 입니다. 어여오세요
 
-bossname = 타로스 기감 2층
+bossname = 타로스 기감2
 bosstime = 21:00
 genPeriod = 168:00
-startDate = 2022-04-07
+startDate = 2021-01-28
 before_alert_ment = 입니다
 alert_ment = 탐 입니다. 어여오세요
 
-bossname = 타로스 기감 2층
+bossname = 타로스 기감2
 bosstime = 07:00
 genPeriod = 168:00
-startDate = 2022-04-08
+startDate = 2021-01-29
 before_alert_ment = 입니다
 alert_ment = 탐 입니다. 어여오세요
 
-bossname = 타로스 기감 2층
+bossname = 타로스 기감2
 bosstime = 14:00
 genPeriod = 168:00
-startDate = 2022-04-08
+startDate = 2021-01-29
 before_alert_ment = 입니다
 alert_ment = 탐 입니다. 어여오세요
 
-bossname = 타로스 기감 2층
+bossname = 타로스 기감2
 bosstime = 21:00
 genPeriod = 168:00
-startDate = 2022-04-08
+startDate = 2021-01-29
 before_alert_ment = 입니다
 alert_ment = 탐 입니다. 어여오세요
 
+bossname = 고르고스 기감3
+bosstime = 20:15
+genPeriod = 168:00
+startDate = 2021-01-25
+before_alert_ment = 입니다
+alert_ment = 탐 입니다. 어여오세요
 
+bossname = 고르고스 기감3
+bosstime = 20:15
+genPeriod = 168:00
+startDate = 2021-01-26
+before_alert_ment = 입니다
+alert_ment = 탐 입니다. 어여오세요
 
+bossname = 고르고스 기감3
+bosstime = 20:15
+genPeriod = 168:00
+startDate = 2021-01-27
+before_alert_ment = 입니다
+alert_ment = 탐 입니다. 어여오세요
 
+bossname = 고르고스 기감3
+bosstime = 20:15
+genPeriod = 168:00
+startDate = 2021-01-28
+before_alert_ment = 입니다
+alert_ment = 탐 입니다. 어여오세요
 
+bossname = 고르고스 기감3
+bosstime = 20:15
+genPeriod = 168:00
+startDate = 2021-01-29
+before_alert_ment = 입니다
+alert_ment = 탐 입니다. 어여오세요
 
+bossname = 텍투스 기감4
+bosstime = 21:15
+genPeriod = 168:00
+startDate = 2021-01-25
+before_alert_ment = 입니다
+alert_ment = 탐 입니다. 어여오세요
 
+bossname = 텍투스 기감4
+bosstime = 21:15
+genPeriod = 168:00
+startDate = 2021-01-26
+before_alert_ment = 입니다
+alert_ment = 탐 입니다. 어여오세요
 
+bossname = 텍투스 기감4
+bosstime = 21:15
+genPeriod = 168:00
+startDate = 2021-01-27
+before_alert_ment = 입니다
+alert_ment = 탐 입니다. 어여오세요
 
+bossname = 텍투스 기감4
+bosstime = 21:15
+genPeriod = 168:00
+startDate = 2021-01-28
+before_alert_ment = 입니다
+alert_ment = 탐 입니다. 어여오세요
 
-
-
-
-
-
-
-
-
-
-
-
-
-
+bossname = 텍투스 기감4
+bosstime = 21:15
+genPeriod = 168:00
+startDate = 2021-01-29
+before_alert_ment = 입니다
+alert_ment = 탐 입니다. 어여오세요
