--- a/fixed_boss.ini
+++ b/fixed_boss.ini
@@ -62,7 +62,7 @@ startDate = 2020-08-30
 before_alert_ment = 입니다
 alert_ment = 탐 입니다. 어여오세요
 
-bossname = 폭주한 클라인
+bossname = 클라인 기감1
 bosstime = 00:00
 genPeriod = 168:00
 startDate = 2021-01-25
