--- a/fixed_boss.ini
+++ b/fixed_boss.ini
@@ -55,7 +55,7 @@ startDate = 2022-04-06
 before_alert_ment = 입니다
 alert_ment = 탐 입니다. 어여오세요
 
-bossname = 네크
+bossname = 녜크
 bosstime = 11:00
 genPeriod = 02:00
 startDate = 2022-04-06
