--- a/fixed_boss.ini
+++ b/fixed_boss.ini
@@ -55,322 +55,322 @@ startDate = 2022-04-06
 before_alert_ment = 입니다
 alert_ment = 탐 입니다. 어여오세요
 
-bossname = 크
+bossname = 네크
 bosstime = 11:00
 genPeriod = 02:00
 startDate = 2022-04-06
 before_alert_ment = 입니다
 alert_ment = 탐 입니다. 어여오세요
 
-bossname = 클라인 기감1
+bossname = 폭주한 클라인
 bosstime = 00:00
 genPeriod = 168:00
 startDate = 2022-04-11
 before_alert_ment = 입니다
 alert_ment = 탐 입니다. 어여오세요
 
-bossname = 클라인 기감1
+bossname = 폭주한 클라인
 bosstime = 06:00
 genPeriod = 168:00
 startDate = 2022-04-11
 before_alert_ment = 입니다
 alert_ment = 탐 입니다. 어여오세요
 
-bossname = 클라인 기감1
+bossname = 폭주한 클라인
 bosstime = 12:00
 genPeriod = 168:00
 startDate = 2022-04-11
 before_alert_ment = 입니다
 alert_ment = 탐 입니다. 어여오세요
 
-bossname = 클라인 기감1
+bossname = 폭주한 클라인
 bosstime = 18:00
 genPeriod = 168:00
 startDate = 2022-04-11
 before_alert_ment = 입니다
 alert_ment = 탐 입니다. 어여오세요
 
-bossname = 클라인 기감1
+bossname = 폭주한 클라인
 bosstime = 00:00
 genPeriod = 168:00
 startDate = 2022-04-12
 before_alert_ment = 입니다
 alert_ment = 탐 입니다. 어여오세요
 
-bossname = 클라인 기감1
+bossname = 폭주한 클라인
 bosstime = 06:00
 genPeriod = 168:00
 startDate = 2022-04-12
 before_alert_ment = 입니다
 alert_ment = 탐 입니다. 어여오세요
 
-bossname = 클라인 기감1
+bossname = 폭주한 클라인
 bosstime = 12:00
 genPeriod = 168:00
 startDate = 2022-04-12
 before_alert_ment = 입니다
 alert_ment = 탐 입니다. 어여오세요
 
-bossname = 클라인 기감1
+bossname = 폭주한 클라인
 bosstime = 18:00
 genPeriod = 168:00
 startDate = 2022-04-12
 before_alert_ment = 입니다
 alert_ment = 탐 입니다. 어여오세요
 
-bossname = 클라인 기감1
+bossname = 폭주한 클라인
 bosstime = 00:00
 genPeriod = 168:00
 startDate = 2022-04-13
 before_alert_ment = 입니다
 alert_ment = 탐 입니다. 어여오세요
 
-bossname = 클라인 기감1
+bossname = 폭주한 클라인
 bosstime = 06:00
 genPeriod = 168:00
 startDate = 2022-04-06
 before_alert_ment = 입니다
 alert_ment = 탐 입니다. 어여오세요
 
-bossname = 클라인 기감1
+bossname = 폭주한 클라인
 bosstime = 12:00
 genPeriod = 168:00
 startDate = 2022-04-06
 before_alert_ment = 입니다
 alert_ment = 탐 입니다. 어여오세요
 
-bossname = 클라인 기감1
+bossname = 폭주한 클라인
 bosstime = 18:00
 genPeriod = 168:00
 startDate = 2022-04-06
 before_alert_ment = 입니다
 alert_ment = 탐 입니다. 어여오세요
 
-bossname = 클라인 기감1
+bossname = 폭주한 클라인
 bosstime = 00:00
 genPeriod = 168:00
 startDate = 2022-04-07
 before_alert_ment = 입니다
 alert_ment = 탐 입니다. 어여오세요
 
-bossname = 클라인 기감1
+bossname = 폭주한 클라인
 bosstime = 06:00
 genPeriod = 168:00
 startDate = 2022-04-07
 before_alert_ment = 입니다
 alert_ment = 탐 입니다. 어여오세요
 
-bossname = 클라인 기감1
+bossname = 폭주한 클라인
 bosstime = 12:00
 genPeriod = 168:00
 startDate = 2022-04-07
 before_alert_ment = 입니다
 alert_ment = 탐 입니다. 어여오세요
 
-bossname = 클라인 기감1
+bossname = 폭주한 클라인
 bosstime = 18:00
 genPeriod = 168:00
 startDate = 2022-04-07
 before_alert_ment = 입니다
 alert_ment = 탐 입니다. 어여오세요
 
-bossname = 클라인 기감1
+bossname = 폭주한 클라인
 bosstime = 00:00
 genPeriod = 168:00
 startDate = 2022-04-08
 before_alert_ment = 입니다
 alert_ment = 탐 입니다. 어여오세요
 
-bossname = 클라인 기감1
+bossname = 폭주한 클라인
 bosstime = 06:00
 genPeriod = 168:00
 startDate = 2022-04-08
 before_alert_ment = 입니다
 alert_ment = 탐 입니다. 어여오세요
 
-bossname = 클라인 기감1
+bossname = 폭주한 클라인
 bosstime = 12:00
 genPeriod = 168:00
 startDate = 2022-04-08
 before_alert_ment = 입니다
 alert_ment = 탐 입니다. 어여오세요
 
-bossname = 클라인 기감1
+bossname = 폭주한 클라인
 bosstime = 18:00
 genPeriod = 168:00
 startDate = 2022-04-08
 before_alert_ment = 입니다
 alert_ment = 탐 입니다. 어여오세요
 
-bossname = 타로스 기감2
+bossname = 암흑영주 타로스
 bosstime = 07:00
 genPeriod = 168:00
 startDate = 2022-04-11
 before_alert_ment = 입니다
 alert_ment = 탐 입니다. 어여오세요
 
-bossname = 타로스 기감2
+bossname = 암흑영주 타로스
 bosstime = 14:00
 genPeriod = 168:00
 startDate = 2022-04-11
 before_alert_ment = 입니다
 alert_ment = 탐 입니다. 어여오세요
 
-bossname = 타로스 기감2
+bossname =암흑영주 타로스
 bosstime = 21:00
 genPeriod = 168:00
 startDate = 2022-04-11
 before_alert_ment = 입니다
 alert_ment = 탐 입니다. 어여오세요
 
-bossname = 타로스 기감2
+bossname = 암흑영주 타로스
 bosstime = 07:00
 genPeriod = 168:00
 startDate = 2022-04-12
 before_alert_ment = 입니다
 alert_ment = 탐 입니다. 어여오세요
 
-bossname = 타로스 기감2
+bossname = 암흑영주 타로스
 bosstime = 14:00
 genPeriod = 168:00
 startDate = 2022-04-12
 before_alert_ment = 입니다
 alert_ment = 탐 입니다. 어여오세요
 
-bossname = 타로스 기감2
+bossname = 암흑영주 타로스
 bosstime = 21:00
 genPeriod = 168:00
 startDate = 2022-04-12
 before_alert_ment = 입니다
 alert_ment = 탐 입니다. 어여오세요
 
-bossname = 타로스 기감2
+bossname = 암흑영주 타로스
 bosstime = 07:00
 genPeriod = 168:00
 startDate = 2022-04-06
 before_alert_ment = 입니다
 alert_ment = 탐 입니다. 어여오세요
 
-bossname = 타로스 기감2
+bossname = 암흑영주 타로스
 bosstime = 14:00
 genPeriod = 168:00
 startDate = 2022-04-06
 before_alert_ment = 입니다
 alert_ment = 탐 입니다. 어여오세요
 
-bossname = 타로스 기감2
+bossname = 암흑영주 타로스
 bosstime = 21:00
 genPeriod = 168:00
 startDate = 2022-04-06
 before_alert_ment = 입니다
 alert_ment = 탐 입니다. 어여오세요
 
-bossname = 타로스 기감2
+bossname = 암흑영주 타로스
 bosstime = 07:00
 genPeriod = 168:00
 startDate = 2022-04-07
 before_alert_ment = 입니다
 alert_ment = 탐 입니다. 어여오세요
 
-bossname = 타로스 기감2
+bossname = 암흑영주 타로스
 bosstime = 14:00
 genPeriod = 168:00
 startDate = 2022-04-07
 before_alert_ment = 입니다
 alert_ment = 탐 입니다. 어여오세요
 
-bossname = 타로스 기감2
+bossname = 암흑영주 타로스
 bosstime = 21:00
 genPeriod = 168:00
 startDate = 2022-04-07
 before_alert_ment = 입니다
 alert_ment = 탐 입니다. 어여오세요
 
-bossname = 타로스 기감2
+bossname = 암흑영주 타로스
 bosstime = 07:00
 genPeriod = 168:00
 startDate = 2022-04-08
 before_alert_ment = 입니다
 alert_ment = 탐 입니다. 어여오세요
 
-bossname = 타로스 기감2
+bossname = 암흑영주 타로스
 bosstime = 14:00
 genPeriod = 168:00
 startDate = 2022-04-08
 before_alert_ment = 입니다
 alert_ment = 탐 입니다. 어여오세요
 
-bossname = 타로스 기감2
+bossname = 암흑영주 타로스
 bosstime = 21:00
 genPeriod = 168:00
 startDate = 2022-04-08
 before_alert_ment = 입니다
 alert_ment = 탐 입니다. 어여오세요
 
-bossname = 고르고스 기감3
+bossname = 수문장 고르고스
 bosstime = 20:15
 genPeriod = 168:00
 startDate = 2022-04-11
 before_alert_ment = 입니다
 alert_ment = 탐 입니다. 어여오세요
 
-bossname = 고르고스 기감3
+bossname = 수문장 고르고스
 bosstime = 20:15
 genPeriod = 168:00
 startDate = 2022-04-12
 before_alert_ment = 입니다
 alert_ment = 탐 입니다. 어여오세요
 
-bossname = 고르고스 기감3
+bossname = 수문장 고르고스
 bosstime = 20:15
 genPeriod = 168:00
 startDate = 2022-04-06
 before_alert_ment = 입니다
 alert_ment = 탐 입니다. 어여오세요
 
-bossname = 고르고스 기감3
+bossname = 수문장 고르고스
 bosstime = 20:15
 genPeriod = 168:00
 startDate = 2022-04-07
 before_alert_ment = 입니다
 alert_ment = 탐 입니다. 어여오세요
 
-bossname = 고르고스 기감3
+bossname = 수문장 고르고스
 bosstime = 20:15
 genPeriod = 168:00
 startDate = 2022-04-08
 before_alert_ment = 입니다
 alert_ment = 탐 입니다. 어여오세요
 
-bossname = 텍투스 기감4
+bossname = 대부 텍투스
 bosstime = 21:15
 genPeriod = 168:00
 startDate = 2022-04-11
 before_alert_ment = 입니다
 alert_ment = 탐 입니다. 어여오세요
 
-bossname = 텍투스 기감4
+bossname = 대부 텍투스
 bosstime = 21:15
 genPeriod = 168:00
 startDate = 2022-04-12
 before_alert_ment = 입니다
 alert_ment = 탐 입니다. 어여오세요
 
-bossname = 텍투스 기감4
+bossname = 대부 텍투스
 bosstime = 21:15
 genPeriod = 168:00
 startDate = 2022-04-06
 before_alert_ment = 입니다
 alert_ment = 탐 입니다. 어여오세요
 
-bossname = 텍투스 기감4
+bossname = 대부 텍투스
 bosstime = 21:15
 genPeriod = 168:00
 startDate = 2022-04-07
 before_alert_ment = 입니다
 alert_ment = 탐 입니다. 어여오세요
 
-bossname = 텍투스 기감4
+bossname = 대부 텍투스
 bosstime = 21:15
 genPeriod = 168:00
 startDate = 2022-04-08
